[project]
name = "Chainlink-drip-ccip-bnm"
authors = [
  { name = "Chainlink-drip-ccip-bnm", email = "github.maturity983@passinbox.com" }
]
description = "A repo to call the drip method of CCIP-BnM contract to mint CCIP-BnM tokens for testing on different test chains"
readme = "README.md"
dynamic = ["version"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.9"
dependencies = [
]

[project.urls]
Documentation = "https://Ankvik-Tech-Labs.github.io/Chainlink-drip-ccip-bnm/"
Source = "https://github.com/Ankvik-Tech-Labs/Chainlink-drip-ccip-bnm"

[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true


##############
# Versioning #
##############

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "scripts/__init__.py"


##################
# External Tools #
##################

[tool.mypy]
files = ["drip_ccip_bnm"]
exclude = ["build/", "dist/", "docs/", "tests/*"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true


[tool.ruff]
target-version = "py39"
line-length = 120
indent-width = 4
include = [
  "**/*.py",
  "**/*.pyi",
  "tests/**/*.py",
  "tests/**/*.pyi"
]
exclude = ["tests"]

[tool.ruff.lint]
preview = true # preview features & checks, use with caution
extend-select = [ # features in preview
    "W292", # missing-newline-at-end-of-file
]
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT", # Boolean trap
    "ICN",
    "ISC",
    "I",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
    "RUF100", # Automatically remove unused # noqa directives
]
ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls, like `dict.get(... True)`
    "FBT003",
    # Ignore checks for possible passwords
    "S105", "S106", "S107",
    # Ignore complexity
    "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
    "PLC1901", # empty string comparisons
    "PLW2901", # `for` loop variable overwritten
    "SIM114", # Combine `if` branches using logical `or` operator
    "E203", # Whitespace before :, needed for black compatability and also `ruff format`
    "ISC001", # causes unexpected behaviour with formatter
]


[tool.ruff.lint.isort]
known-first-party = ["drip_ccip_bnm"]


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"


[tool.ruff.lint.per-file-ignores]
# Allow print/pprint
"examples/*" = ["T201"]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]


[tool.pytest.ini_options]
# addopts = "--cov=src/drip_ccip_bnm/ --cov-report=term-missing"


#####################
# Environment Setup #
#####################


# Default env dendencies
[tool.hatch.envs.default]
dependencies = [
    "eth-ape"
]
installer = "uv" # or "pip"
# post-install-commands = ["pre-commit install"]


# Lint env dendencies
[tool.hatch.envs.lint]
extra-dependencies = [
  "mypy",
  "ruff",
]


[tool.hatch.envs.lint.scripts]
typing = [
  "echo \"VERSION: `mypy --version`\"",
  "mypy --install-types --non-interactive {args}"
]
lint = [
  "echo \"VERSION: `ruff --version`\"",
  "ruff format .",
  "ruff check . --fix",
  "mypy drip_ccip_bnm/",
]
lint-check = [
  "echo \"VERSION: `ruff --version`\"",
  "ruff format --check .",
  "ruff check .",
  "mypy drip_ccip_bnm/",
]

# Docs env dendencies
[tool.hatch.envs.docs]
dependencies = [

]


[tool.hatch.envs.docs.scripts]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build --clean --strict"
# --ignore-url=None since the SUMMARY.md file leaves a <toc>None</toc> in sitemap.xml
validate = "linkchecker --config .linkcheckerrc --ignore-url=/reference --ignore-url=None site"
# https://github.com/linkchecker/linkchecker/issues/678
build-check = [
  "docs-build",
  "validate",
]

# Testing env dendencies
[tool.hatch.envs.test]
extra-dependencies = [
  "pytest",
]


[tool.hatch.envs.test.scripts]
test = "pytest"
test-cov-xml = "pytest --cov-report=xml"


# Replace tox & nox
[[tool.hatch.envs.test.matrix]]
python = ["3.9"]

#########
# Build #
#########

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"


